# lib/db/src/schema/index.ts
@@ -8,3 +8,4 @@ export * from "./otpVerifications";
 export * from "./tournaments";
 export * from "./announcements";
 export * from "./clubApplications";
+export * from "./clubSettings";
